--- a/12-01-24/src/components/hero/index.module.scss
+++ b/12-01-24/src/components/hero/index.module.scss
@@ -6,7 +6,7 @@
   .Wrapper {
     @include flex-container(flex, row, space-between, center, 1rem);
     width: 90%;
-    height: 100%;
+    height: 15vh;
     margin: 0 auto;
     padding: 2rem 0rem;
     color: #fff;
