--- a/react-project/src/styles/StarterGame.module.scss
+++ b/react-project/src/styles/StarterGame.module.scss
@@ -28,6 +28,11 @@
       object-fit: contain;
     }
 
+    .item {
+      width: 50px;
+      height: 50px;
+    }
+
     .Jumping {
       animation: jump 0.5s infinite;
     }
