--- a/react-project/src/components/itemsList/index.module.scss
+++ b/react-project/src/components/itemsList/index.module.scss
@@ -28,5 +28,10 @@
       height: 50px;
       object-fit: contain;
     }
+
+    .item {
+      width: 50px !important;
+      height: 50px !important;
+    }
   }
 }
